# aoc

./: .gitignore  Cargo.toml  README.md
2018/: common.py  day3.py  day4.py  day5.py  day6.py
2019/notes/: day16.txt
2021/: Cargo.toml
2021/src/: aoc_input.rs
notes/: 2021_day24_notes.txt
src/: aoc_input.rs  coordinates.rs  digits.rs  grid.rs  intcode.rs  lib.rs  num.rs  parse.rs  vec.rs
