[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
lazy_static = "1.4.0"
num_enum = "0.5.4"
num-bigint = "0.4.3"
num-derive = "0.3.3"
num-integer = "0.1.44"
num-rational = "0.4.0"
num-traits = "0.2.14"
reqwest = { version = "0.11.7", features = ["blocking"] }
strum = "0.23.0"
strum_macros = "0.23.1"
regex = "1.5.4"
itermore = "0.1.0"
petgraph = "0.6.0"
bimap = "0.6.1"
